# sr-diffusion

./: .gitignore  CHECKPOINT_LICENSE.md  LICENSE  README.md  compare_eval_samples.py  compare_latent_candidates.py  eval_autoencoder.py  eval_diffusion_samples.py  infer_diffusion.py  infer_reconstruct.py  pyproject.toml  train_autoencoder.py  train_diffusion.py  train_latent_pretrain.py
configs/: autoencoder_base.yaml  autoencoder_df2k.yaml  autoencoder_div2k.yaml  autoencoder_photo10k.yaml  autoencoder_scratch_tiny.yaml  autoencoder_tiny.yaml  degradation_presets.yaml  diffusion_photo100k_b32.yaml  diffusion_photo100k_b32_stage4_condition.yaml  diffusion_photo100k_b32_stage4_condition_v2.yaml  diffusion_photo100k_b32_v2.yaml  diffusion_photo100k_xl_stage4_condition_v3.yaml  diffusion_photo100k_xl_stage4_condition_v3_edge_amp_b16.yaml  diffusion_photo100k_xl_stage4_condition_v3_edge_b16.yaml  diffusion_photo100k_xl_stage4_condition_v3_step72000_offline.yaml  diffusion_photo10k.yaml  diffusion_photo10k_b32.yaml  diffusion_photo10k_b32_stage4_condition.yaml  diffusion_photo10k_b32_stage4_condition_t25.yaml  diffusion_photo10k_b32_stage4_lowt.yaml  diffusion_scratch_tiny.yaml  latent_pretrain_photo100k.yaml  latent_pretrain_photo100k_v2.yaml  latent_pretrain_photo100k_v3_noise.yaml  latent_pretrain_photo100k_v3_noise_xl.yaml  latent_pretrain_photo10k.yaml  latent_pretrain_scratch_tiny.yaml
docs/: DATASETS.md  HANDOFF_KO.md  HUGGINGFACE.md  VM_RECOVERY_KO.md
metrics/: stage2_photo100k_b64_summary.json  stage2_photo100k_v2_b64_summary.json  stage3_photo100k_b32_summary.json  (+9 more)
(+52 files in other folders)
